--- a/views/contact.html
+++ b/views/contact.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1>Contact</h1>
 		<h2>Hi <%=title%></h2>
-		<p>Your contact information here.</p>
+		<p>Your contact information here. Hoorah!</p>
 		
 		<br/>
 		<br/>
